--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -4,3 +4,66 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 .clearfix:after {visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; }
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
+body {
+	background: #A8A89C;
+}
+
+.artistsContainer {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	color: #FFFFFF;
+	.artistCard {
+		font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
+		background: #363631;
+		width: 22%;
+		border: 1px solid #FFFFFF;
+		border-radius: 5px;
+		margin: 1.5%;
+		box-shadow: 0 2px 4px darken(#363631, 20%);
+		.artistCardName {
+			text-transform: uppercase;
+		}
+		.artistCardImgContainer {
+			width: 100px;
+			height: 100px;
+			border: 1px solid #FFFFFF;
+			background-position: center;
+			background-size: cover;
+			background-repeat: no-repeat;
+			border-radius: 50%;
+			margin: 15px;
+		}
+		.buttonsContainer {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			button {
+				margin: 4px 0;
+				border: none;
+				border-radius: 5px;
+				color: #FFFFFF;
+				padding: 4px 8px;
+				font-size: 10px;
+			}
+			.viewMoreInfo {
+				background: #A8A89C;
+				box-shadow: 0 2px 1px darken(#A8A89C, 20%);
+			}
+			.addToPlaylist {
+				background: #CC1841;
+				box-shadow: 0 2px 1px darken(#CC1841, 20%);
+			}
+			button:active {
+				position: relative;
+				top: 1px;
+			}
+		}
+	}
+}
+
