--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -4,3 +4,38 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 .clearfix:after {visibility: hidden; display: block; font-size: 0; content: " "; clear: both; height: 0; }
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
+
+
+// This is the styling for the search bar
+input {
+	width:500px;
+	height:50px;
+	display: flex;
+	justify-content:center;
+}
+
+.autocomplete-suggestions { 
+	border: 1px solid #999; 
+	background: #FFF; 
+	overflow: auto; 
+}
+.autocomplete-suggestion { 
+	padding: 2px 5px; 
+	white-space: nowrap; 
+	overflow: hidden; 
+}
+.autocomplete-selected { 
+	background: #F0F0F0; 
+}
+.autocomplete-suggestions strong { 
+	font-weight: normal; 
+	color: #3399FF; 
+}
+.autocomplete-group { 
+	padding: 2px 5px; 
+}
+.autocomplete-group strong { 
+	display: block; 
+	border-bottom: 1px solid #000; 
+}
