--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -86,6 +86,8 @@ body {
 				color: #FFFFFF;
 				padding: 4px 8px;
 				font-size: 10px;
+				outline: none;
+				transition: all 0.1s ease;
 			}
 			.viewMoreInfo {
 				background: #A8A89C;
@@ -96,8 +98,13 @@ body {
 				box-shadow: 0 2px 1px darken(#CC1841, 20%);
 			}
 			button:active {
+				// outline: none;
+			}
+			.addToPlaylistPressed {
 				position: relative;
 				top: 1px;
+				background: #A8A89C;
+				box-shadow: 0 2px 1px darken(#A8A89C, 20%);
 			}
 		}
 	}
