--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -6,7 +6,14 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 
-
+h1 {
+	font-family: 'roboto';
+	font-weight: 100;
+	letter-spacing: 15px;
+	text-transform: uppercase;
+	color:white;
+	text-shadow: 3px 3px 3px solid black;
+}
 
 // This is the styling for the search bar
 input {
@@ -14,6 +21,14 @@ input {
 	height:50px;
 	display: flex;
 	justify-content:center;
+}
+
+header {
+	display: flex;
+	flex-direction:column;
+	justify-content:center;
+	align-items:center;
+	height:100vh;
 }
 
 .autocomplete-suggestions { 
@@ -31,7 +46,7 @@ input {
 }
 .autocomplete-suggestions strong { 
 	font-weight: normal; 
-	color: #3399FF; 
+	color: red; 
 }
 .autocomplete-group { 
 	padding: 2px 5px; 
