--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -11,6 +11,19 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
+html, button {
+	font-family: 'roboto', sans-serif;
+	font-weight: 100;
+}
+
+p {
+	font-family: 'helvetica', sans-serif;
+	font-weight: 100;
+}
+
+body {
+	background: transparentize($blackColor, .3);
+}
 
 h1 {
 	font-family: 'roboto';
@@ -23,13 +36,37 @@ h1 {
 
 // This is the styling for the search bar
 
-header {
+main {
 	display: flex;
 	flex-direction:column;
 	justify-content:center;
 	align-items:center;
 	height:100vh;
 	position: relative;
+	.alert {
+		position: absolute;
+		bottom: 0;
+		display: flex;
+		text-align: center;
+		justify-content: center;
+		align-items: center;
+		background: rgba(0,0,0,0.8);
+		right: 0;
+		left: 0;
+		top: 0;
+		padding: 20px;
+		font-size: 20px;
+		.fa-times-circle {
+			position: absolute;
+			left: 30px;
+			top: 30px;
+			font-size: 2.8rem;
+			color: white;
+		}
+		.fa-times-circle:hover {
+			cursor: pointer;
+		}
+	}
 	.splash {
 		height: 100vh;
 		display: flex;
@@ -43,9 +80,10 @@ header {
 			width: 100px;
 			height: 40px;
 			border-radius: 8px;
-			border: #CA1D44;
-			box-shadow: 0 3px 1px $blackColor;
+			border: $redColor;
+			box-shadow: 0 3px 1px darken($redColor,20%);
 			background: $redColor;
+			color: $whiteColor;
 		}
 		button:active {
 			outline: none;
@@ -113,44 +151,40 @@ form.hiddenForm {
 	border-bottom: 1px solid #000; 
 }
 
-body {
-	background: #A8A89C;
-}
-
 .artistsContainer {
 	display: none;
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
 	color: #FFFFFF;
-	height: 100vh;
+	height: 75%;
 	width: 100vw;
 	opacity: 0;
 	visibility: hidden;
 	position: absolute;
 	transition: all 0.3s ease;
 	.artistCard {
-		font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
 		align-items: flex-start;
 		background: #363631;
-		width: 70%;
+		width: 100%;
 		max-width: 600px;
 		border-radius: 5px;
 		// margin: 1.5%;
 		box-shadow: 0 4px 8px darken(#363631, 20%);
-		height: 70%;
+		height: 90%;
 		border-radius: 5px;
 		text-transform: uppercase;
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: top;
 		.artistCardImgContainer {
 			// width: 100px;
 			// height: 100px;
 			// border: 1px solid #FFFFFF;
 			// background-position: center;
-			background-size: cover;
-			background-repeat: no-repeat;
 			// border-radius: 50%;
 			// margin: 15px;
 
@@ -176,7 +210,7 @@ body {
 		.buttonsContainer {
 			display: flex;
 			flex-direction: column;
-			justify-content: center;
+			justify-content: flex-end;
 			width: 100%;
 			height: 20%;
 			margin: 0;
@@ -190,6 +224,7 @@ body {
 				// font-size: 10px;
 				outline: none;
 				transition: background 0.1s ease;
+				text-transform: uppercase;
 			}
 			.viewMoreInfo {
 				background: #A8A89C;
@@ -199,8 +234,13 @@ body {
 				background: $redColor;
 				box-shadow: 0 3px 1px darken(#CC1841, 20%);
 				margin: 0;
-				padding: 20px;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				// padding: 15px;
+				height: 50%;
 				border-radius: 0 0 5px 5px;
+				font-weight: 300;
 			}
 			button:active {
 				// outline: none;
@@ -216,8 +256,10 @@ body {
 				a {
 					text-decoration: none;
 					color: $whiteColor;
+					width: 50%;
 					.fa {
 						color: $redColor;
+						margin-left: 5px;
 					}
 				}
 				.viewOnSpotify {
@@ -228,21 +270,26 @@ body {
 				}
 				.viewOnSpotify,
 				.listenOnSpotify {
-					width: 50%;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					height: 50%;
+					width: 100%;
 					text-align: center;
 					background: $blackColor;
 					margin: 0;
-					padding: 20px;
-					border-bottom: 1px solid $greyColor;
+					padding: 15px;
+					// border-bottom: 1px solid $greyColor;
 					border-top: 1px solid $greyColor;
 					border-radius: 0;
+					font-weight: 300;
 				}
 			}
 		}
 	}
 	.fa-times-circle {
 		position: absolute;
-		right: 30px;
+		left: 30px;
 		top: 30px;
 		font-size: 2.8rem;
 		color: white;
@@ -253,17 +300,17 @@ body {
 }
 .addedArtistsContainer {
 	position: fixed;
-	top: 0;
+	bottom: 0;
+	width: 100%;
 	height: 0%;
 	right: 0;
 	opacity: 0;
 	visibility: hidden;
 	transition: all 0.4s ease-in-out;
 	background: rgba(255,255,255,0.7);
-	width: 270px;
 	display: flex;
-	justify-content: space-between;
-	align-content: center;
+	justify-content: flex-start;
+	align-items: center;
 	flex-wrap: wrap;
 	padding: 0 15px;
 	.closeAddedArtistsButton {
@@ -277,12 +324,14 @@ body {
 		}
 	}
 	.play-button {
-		width: 100%;
+		width: 20%;
+		order: 6;
 		text-align: center;
-		margin-bottom: 50px;
+		// margin-bottom: 50px;
 		img {
-			width: 90px;
-			margin: 15px auto;
+			width: 80px;
+			height: 80px;
+			// margin: 15px auto;
 			&:hover {
 				cursor: pointer;
 			}
@@ -296,19 +345,19 @@ body {
 	.addedArtistsCard {
 		text-align: center;
 		padding: 5px;
-		max-width: 110px;
+		width: 20%;
 		.addedArtistImgContainer {
 			width: 80px;
 			height: 80px;
 			border-radius: 50%;
-			margin: 10px;
-			border: 1px solid lightgrey;
+			margin: 10px auto;
+			border: 3px solid $redColor;
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
 		}
 		p {
-			color: #CC1841;
+			color: $blackColor;
 			letter-spacing: 1px;
 			margin: 0 auto;
 			overflow: hidden;
@@ -323,16 +372,36 @@ body {
 .addedArtistsContainer.show {
 	opacity: 1;
 	visibility: visible;
-	height: 100%;
+	height: 25%;
+	width: 100%;
 }
 
 
 .showArtistContainer {
-		display: flex;
-		top: 0;
-		visibility: visible;
-		opacity: 1;
-		background: transparentize($blackColor, .3);
-	}
+	display: flex;
+	top: 0;
+	visibility: visible;
+	opacity: 1;
+	// background: transparentize($blackColor, .3);
+}
 
+.spotifyContainer {
+	z-index: 5;
+	background: $blackColor;
+	width: 100%;
+	height: 100%;
+	display: none;
+	justify-content: center;
+	align-items: center;
+	.fa-times-circle {
+		position: absolute;
+		left: 30px;
+		top: 30px;
+		font-size: 2.8rem;
+		color: white;
+	}
+	.fa-times-circle:hover {
+		cursor: pointer;
+	}
+}
 
