--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -23,7 +23,7 @@ h1 {
 
 // This is the styling for the search bar
 
-header {
+main {
 	display: flex;
 	flex-direction:column;
 	justify-content:center;
