Updated button styling bug.

--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -218,6 +218,7 @@ form.hiddenForm {
 			height: 20%;
 			margin: 0;
 			border-radius: 0;
+			background: $blackColor;
 			button {
 				margin: 4px 0;
 				border: none;
@@ -256,10 +257,12 @@ form.hiddenForm {
 			}
 			.onSpotifyContainer {
 				display: flex;
+				height: 50%;
 				a {
 					text-decoration: none;
 					color: $whiteColor;
 					width: 50%;
+					height: 100%;
 					.fa {
 						color: $redColor;
 						margin-left: 5px;
@@ -276,12 +279,12 @@ form.hiddenForm {
 					display: flex;
 					justify-content: center;
 					align-items: center;
-					height: 50%;
+					height: 100%;
 					width: 100%;
 					text-align: center;
 					background: $blackColor;
 					margin: 0;
-					padding: 15px;
+					// padding: 15px;
 					// border-bottom: 1px solid $greyColor;
 					border-top: 1px solid $greyColor;
 					border-radius: 0;
