--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -108,8 +108,9 @@ main {
 
 form.searchForm {
 	display: none;
+	width: 60%;
 	input.searchFormInput {
-		width:500px;
+		width: 80%;
 		height:50px;
 		// display: flex;
 		justify-content:center;
@@ -128,7 +129,8 @@ form.searchForm {
 		border-radius: 0 5px 5px 0;
 		color: white;
 		text-transform: uppercase;
-		width: 100px;
+		width: 20%;
+		min-width: 100px;
 		height:50px;
 	}
 }
