--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -171,7 +171,7 @@ form.hiddenForm {
 	align-items: center;
 	color: #FFFFFF;
 	height: 75%;
-	width: 100vw;
+	width: 100%;
 	opacity: 0;
 	visibility: hidden;
 	position: absolute;
@@ -182,7 +182,7 @@ form.hiddenForm {
 		justify-content: space-between;
 		align-items: flex-start;
 		background: #363631;
-		width: 100%;
+		width: 80%;
 		max-width: 600px;
 		border-radius: 5px;
 		// margin: 1.5%;
@@ -404,10 +404,11 @@ form.hiddenForm {
 .spotifyContainer {
 	z-index: 5;
 	background: $blackColor;
-	width: 100%;
+	width: 100vw;
 	height: 100%;
 	display: none;
 	justify-content: center;
+	flex-direction: column-reverse;
 	align-items: center;
 	.fa-times-circle {
 		position: absolute;
