Added Heather egg and fixed responsive

--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -382,7 +382,8 @@ form.hiddenForm {
 				font-size: 30px;
 				transition:all 0.1s ease;
 				color: white;
-				font-size: 68px;
+				font-size: 49px;
+				text-shadow: 0px 2px 4px black;
 				cursor: pointer;
 			}
 			&:hover .removeImg {
