--- a/dev/styles/_media.scss
+++ b/dev/styles/_media.scss
@@ -1,11 +1,21 @@
-@media screen and (min-width: 1281px) {
-}
-@media screen and (max-width: 1280px) {
-}
+
 @media screen and (max-width: 940px) {
 	form.searchForm {
 		width: 80%;
 	}
+	.artistsContainer {
+		.fa-times-circle {
+			font-size: 1.4rem;
+			top: 10px;
+			right: 10px;
+		}
+	}
+	.info-container {
+		width: 80%;
+		top: 80px;
+    	left: 50%;
+    	transform: translateX(-50%);
+	} 
 }
 @media screen and (max-width: 767px) {
 	form.searchForm {
@@ -56,5 +66,23 @@
 				display: none;
 			}
 		}
-	} 
+	}
+	.info-icon {
+		top: 0;
+		left: 0;
+	}
+	.add-another-artist {
+		padding: 6px;
+		font-size: 13px;
+		bottom: 8px;
+	}
+	.info-container {
+		top: 0;
+		right: 0;
+		left: 0;
+		bottom: 0;
+		padding: 60px;
+		transform: initial;
+		width: 100%;
+	}
 }
