--- a/dev/styles/_media.scss
+++ b/dev/styles/_media.scss
@@ -42,6 +42,11 @@
 		border-radius: 5px;
 	}
 }
+@media screen and (min-width: 480px) {
+	.add-another-artist {
+		bottom: 11px;
+	}
+}
 
 @media screen and (max-width: 480px) {
 	main {
