--- a/dev/styles/style.scss
+++ b/dev/styles/style.scss
@@ -58,7 +58,7 @@ main {
 			position: absolute;
 			right: 30px;
 			top: 30px;
-			font-size: 2.8rem;
+			font-size: 18px;
 			color: white;
 		}
 		.fa-times-circle:hover {
